# hitchpage

./: .gitignore  MANIFEST.in  PROJECT_NAME  README.md  key.sh  pyproject.toml
.github/workflows/: regression.yml
docs/public/: changelog.md  index.md
docs/public/approach/: index.md
docs/public/using/: iframe.md  index.md  quickstart.md  reload.md
docs/src/: index.md
docs/src/approach/: index.md  page-config-model.md
docs/src/using/: index.md
hitch/: docstory.yml  engine.py  hitchreqs.in  hitchreqs.txt  key.py
hitch/story/: iframe.story  quickstart.story  reload.story  setup.story
hitchpage/: model.py
page_config_model/: __init__.py  model.py
