[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hitchpage"]

[project]
name = "hitchpage"
authors = [
    {name = "Colm O'Connor", email = "colm.oconnor.github@gmail.com"},
]
description = "Page config model library."
license = {file = "LICENSE.txt"}
requires-python = ">=3.7.0"
keywords = ["yaml", "hitchdev", "bdd", "tdd", "playwright", "tests"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries",
    "Natural Language :: English",
    "Environment :: Console",
]
dependencies = [
    "strictyaml>=1.4.3",
    "playwright>=1.24.1",
]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://hitchdev.com/hitchpage"
documentation = "https://hitchdev.com/hitchpage/using"
repository = "https://github.com/hitchdev/hitchpage"
changelog = "https://hitchdev.com/hitchpage/changelog"

[tool.setuptools.dynamic]
readme = {file = ["README.md",], content-type = "text/markdown"}
version = {file = "VERSION"}
